workspace-sf/force-app/main/default/objects/Fatura__c/Fatura__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os dados das faturas</description>
    <label>Fatura</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da fatura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>