workspace-sf/force-app/main/default/objects/Fatura__c/fields/CodigoAnexoFatura__c.field-meta.xml
<CustomField>
    <fullName>CodigoAnexoFatura__c</fullName>
    <label>Código do anexo da fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>