workspace-sf/force-app/main/default/objects/Fatura__c/fields/CodigoBoleto__c.field-meta.xml
<CustomField>
    <fullName>CodigoBoleto__c</fullName>
    <label>Código do boleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>