workspace-sf/force-app/main/default/objects/Fatura__c/fields/CodigoProdutoComercial__c.field-meta.xml
<CustomField>
    <fullName>CodigoProdutoComercial__c</fullName>
    <label>Código do produto comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>