workspace-sf/force-app/main/default/objects/Fatura__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturas</relationshipLabel>
    <relationshipName>Faturas</relationshipName>
    <type>Lookup</type>
</CustomField>