workspace-sf/force-app/main/default/objects/Fatura__c/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data de emissão</label>
    <type>Date</type>
</CustomField>