workspace-sf/force-app/main/default/objects/Fatura__c/fields/DataPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataPagamento__c</fullName>
    <label>Data de pagamento</label>
    <type>Date</type>
</CustomField>