workspace-sf/force-app/main/default/objects/Fatura__c/fields/Endosso__c.field-meta.xml
<CustomField>
    <fullName>Endosso__c</fullName>
    <label>Endosso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>