workspace-sf/force-app/main/default/objects/Fatura__c/fields/FinalCompetencia__c.field-meta.xml
<CustomField>
    <fullName>FinalCompetencia__c</fullName>
    <label>Final de competência</label>
    <type>Date</type>
</CustomField>