workspace-sf/force-app/main/default/objects/Fatura__c/fields/IdFatura__c.field-meta.xml
<CustomField>
    <fullName>IdFatura__c</fullName>
    <label>Id da fatura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>