workspace-sf/force-app/main/default/objects/Fatura__c/fields/InicioCompetencia__c.field-meta.xml
<CustomField>
    <fullName>InicioCompetencia__c</fullName>
    <label>Início de competência</label>
    <type>Date</type>
</CustomField>