workspace-sf/force-app/main/default/objects/Fatura__c/fields/NumeroContratoFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>NumeroContratoFinanceiro__c</fullName>
    <label>Número contrato financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>