workspace-sf/force-app/main/default/objects/Fatura__c/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parceiro</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Faturas</relationshipLabel>
    <relationshipName>Faturas</relationshipName>
    <type>Lookup</type>
</CustomField>