workspace-sf/force-app/main/default/objects/Fatura__c/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>