workspace-sf/force-app/main/default/objects/Fatura__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em criação</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Paga</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Erro - SAP</fullName>
            </value>
            <value>
                <fullName>Criada - SAP</fullName>
                <isActive>false</isActive>
                <label>Criada - SAP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>