workspace-sf/force-app/main/default/objects/Fatura__c/fields/TipoFatura__c.field-meta.xml
<CustomField>
    <fullName>TipoFatura__c</fullName>
    <label>Tipo de fatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BatimentoContabil</fullName>
                <label>Batimento Contábil</label>
            </value>
            <value>
                <fullName>Cobranca</fullName>
                <label>Cobrança</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>