workspace-sf/force-app/main/default/objects/Fatura__c/fields/ValorIOF__c.field-meta.xml
<CustomField>
    <fullName>ValorIOF__c</fullName>
    <label>Valor de IOF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>