workspace-sf/force-app/main/default/objects/Fatura__c/fields/ValorLiquido__c.field-meta.xml
<CustomField>
    <fullName>ValorLiquido__c</fullName>
    <label>Valor líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>