workspace-sf/force-app/main/default/objects/Fatura__c/fields/ValorPago__c.field-meta.xml
<CustomField>
    <fullName>ValorPago__c</fullName>
    <label>Valor pago</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>