workspace-sf/force-app/main/default/objects/Fatura__c/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>