workspace-sf/force-app/main/default/objects/Fatura__c/validationRules/ValidarDataEmissaoVencimento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDataEmissaoVencimento</fullName>
    <active>false</active>
    <description>Data de vencimento da parcela não pode ser menor do que a data de emissão</description>
    <errorConditionFormula>DataVencimento__c &lt;  DataEmissao__c</errorConditionFormula>
    <errorDisplayField>DataVencimento__c</errorDisplayField>
    <errorMessage>Data de vencimento deve ser maior ou igual a data de emissão</errorMessage>
</ValidationRule>