workspace-sf/force-app/main/default/objects/Fatura__c/validationRules/ValidarInicioFinalCompetencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarInicioFinalCompetencia</fullName>
    <active>false</active>
    <description>final de competência não pode ser menor que o início de competência</description>
    <errorConditionFormula>FinalCompetencia__c &lt; InicioCompetencia__c</errorConditionFormula>
    <errorDisplayField>FinalCompetencia__c</errorDisplayField>
    <errorMessage>Final de competência deve ser maior ou igual o início de competência</errorMessage>
</ValidationRule>