workspace-sf/force-app/main/default/objects/Fatura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TipoFatura__c</columns>
    <columns>Conta__c</columns>
    <columns>DataVencimento__c</columns>
    <columns>DataPagamento__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Erro - SAP</value>
    </filters>
    <label>Todas as faturas</label>
</ListView>