workspace-sf/force-app/main/default/objects/Fatura__c/listViews/TodasFaturas.listView-meta.xml
<ListView>
    <fullName>TodasFaturas</fullName>
    <columns>NAME</columns>
    <columns>TipoFatura__c</columns>
    <columns>Parceiro__c</columns>
    <columns>Conta__c</columns>
    <columns>Status__c</columns>
    <columns>DataVencimento__c</columns>
    <columns>Empresa__c</columns>
    <columns>Sucursal__c</columns>
    <columns>Ramo__c</columns>
    <columns>Apolice__c</columns>
    <columns>Endosso__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as faturas</label>
</ListView>